<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/register_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp">

    <EditText
        style="@style/etStyleRegister.username"
        android:fontFamily="sans-serif"
        android:hint="@string/username"
        android:id="@+id/et_username"/>

    <EditText
        style="@style/etStyleRegister.password"
        android:fontFamily="sans-serif"
        android:id="@+id/et_password" />

    <Button
        style="@style/etStyleRegister.btn"
        android:text="@string/login"
        android:onClick="checkForLogin"
        android:id="@+id/btn_check_login" />

    <TextView
        style="@style/tvMember.status"
        android:layout_marginTop="25dp"
        android:text="@string/forgot_password"
        android:onClick="openResetPassword"
        android:id="@+id/tv_forgot_password"/>
</LinearLayout>